objects/MDPERSONATOR__MD_personatorSettingAux__c.object
<CustomObject>
    <description>An object that stores application settings. (for MD Property)</description>
    <fields>
        <fullName>MDPERSONATOR__aac__c</fullName>
        <label>aac</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__append__c</fullName>
        <defaultValue>&quot;Blank&quot;</defaultValue>
        <label>append</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__centricHint__c</fullName>
        <defaultValue>&quot;Auto&quot;</defaultValue>
        <label>centricHint</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__correctFirstName__c</fullName>
        <defaultValue>&quot;On&quot;</defaultValue>
        <label>correctFirstName</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__correctSyntax__c</fullName>
        <defaultValue>&quot;On&quot;</defaultValue>
        <label>correctSyntax</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__customerId__c</fullName>
        <defaultValue>&quot;000000000&quot;</defaultValue>
        <label>customerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__databaseLookup__c</fullName>
        <defaultValue>&quot;On&quot;</defaultValue>
        <label>databaseLookup</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__diacritics__c</fullName>
        <defaultValue>&quot;Auto&quot;</defaultValue>
        <label>diacritics</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__genderAggression__c</fullName>
        <defaultValue>&quot;Neutral&quot;</defaultValue>
        <label>genderAggression</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__genderPopulation__c</fullName>
        <defaultValue>&quot;Mixed&quot;</defaultValue>
        <label>genderPopulation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpAddressDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpAddressDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpCensus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpCensus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpGeocode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpGeocode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpNameDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpNameDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpParsedAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpParsedAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpParsedEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpParsedEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpParsedPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpParsedPhone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__isAppendAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAppendAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__isCheckAction__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isCheckAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__isVerifyAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVerifyAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__middleNameLogic__c</fullName>
        <defaultValue>&quot;ParseLogic&quot;</defaultValue>
        <label>middleNameLogic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__nameHint__c</fullName>
        <defaultValue>&quot;Varying&quot;</defaultValue>
        <label>nameHint</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__salutationFormat__c</fullName>
        <defaultValue>&quot;Formal&quot;</defaultValue>
        <label>salutationFormat</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__standardizeCompany__c</fullName>
        <defaultValue>&quot;On&quot;</defaultValue>
        <label>standardizeCompany</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__updateDomain__c</fullName>
        <defaultValue>&quot;On&quot;</defaultValue>
        <label>updateDomain</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__usePreferredCity__c</fullName>
        <defaultValue>&quot;Off&quot;</defaultValue>
        <label>usePreferredCity</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__webServiceUrl__c</fullName>
        <defaultValue>&quot;https://personator.melissadata.net/v3/WEB/ContactVerify/doContactVerify&quot;</defaultValue>
        <label>webServiceUrl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>MD_personatorSettingAux</label>
    <nameField>
        <label>MD_personatorSettingAux Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_personatorSettingAuxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>